hphp/hack/test/typecheck/case_type/recursive/subtyping_simple1c.php.exp
ERROR: File "subtyping_simple1c.php", line 4, characters 11-11:
This recursive case type is not supported. `A` should not be at the top-level. (Typing[4485])
